// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros 1. as a function: 1. as a function 1`] = `


import dedent from "../macro";

dedent(\`
  some stuff
\`);
      

      ↓ ↓ ↓ ↓ ↓ ↓

"some stuff";

`;

exports[`macros 2. as a template string: 2. as a template string 1`] = `


import dedent from "../macro";

dedent\`
  some stuff
\`;
      

      ↓ ↓ ↓ ↓ ↓ ↓

"some stuff";

`;

exports[`macros 3. explicit newline: 3. explicit newline 1`] = `


import dedent from "../macro";

dedent\`
  <p>
    Hello world!
  </p>

\`;
      

      ↓ ↓ ↓ ↓ ↓ ↓

"<p>\\n  Hello world!\\n</p>";

`;

exports[`macros 4. multiple indentations: 4. multiple indentations 1`] = `


import dedent from "../macro";

dedent\`
    first
      second
          third
\`;
      

      ↓ ↓ ↓ ↓ ↓ ↓

"first\\n  second\\n      third";

`;

exports[`macros 5. expressions: 5. expressions 1`] = `


import dedent from "../macro";

dedent\`
  first line
    second
    third
\`;
      

      ↓ ↓ ↓ ↓ ↓ ↓

"first line\\n  second\\n  third";

`;
